Build for 6468395ba5bbea818ad7aefc0cd745d3555b346c

--- a/develop/index.html
+++ b/develop/index.html
@@ -16,5 +16,5 @@
     
   </head>
   <body>
-  <script type="text/javascript" src="lib.min.js"></script><script type="text/javascript" src="gui.js"></script></body>
+  <script type="text/javascript" src="lib.min.js"></script><script type="text/javascript" src="chunks/gui.js"></script></body>
 </html>
